Changelog
=========


1.4.5 (unreleased)
------------------

- fix: error when uploading a not scalable image mimetype (i.e. .dwg)
  we now check for allowed mimetypes to fix the error
  [eschmutz]

1.4.4 (2011-08-22)
------------------


1.4.3 (unreleased)
------------------

- created imagepreview in file_view
  [ttschanz]

- Added registry.xml for user_ids field. 
  [mathias.leimgruber]

- Added setFilename() method.
  [Thomas Buchberger]


1.4.2
-----

- First move effectiveDate field to default schemata, then change write 
  permissions on all other fields (except default schemata) 
  [31.05.2011, mathias.leimgruber]

1.4.1
-----

- Do not show specific users in Journal
  [16.02.2011, ttschanz]


1.4
---
- Show Journal to members with Reader-role.
  [mathias.leimgruber]

1.3
---
- Link to author's site
  [mathias.leimgruber]

- Removed styles, this should be done by theme
  [mathias.leimgruber]

- Some translations / Added default_method to effectiveDate.
  [mathias.leimgruber]


1.2
---

1.1
---

1.0
---

- Initial release